--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 \title{{\large 日本語タイトル}\\
 {\normalsize title in English}}
 
-\author{$\bigcirc$丸高　穂山\footnote{面白会員}\ $\cdot$\ 浜平　純崎\footnote{わくわく会員}\\
+\author{\normalsize{$\bigcirc$丸高　穂山\footnote{面白会員}\ $\cdot$\ 浜平　純崎\footnote{わくわく会員}}\\
 {\small Hoyama Marutaka and Zyunsaki Hamahira}}
 % \date{\西暦{\today}}
 \date{}
