update some lines

--- a/main.tex
+++ b/main.tex
@@ -1,13 +1,11 @@
 \input{(このディレクトリの絶対パス)/preambles/rssj.tex}
 
 
-\title{{\large 日本語タイトル}\\
-{\normalsize title in English}}
+\title{日本語タイトル}
+\entitle{Title in English}
 
-\author{\normalsize{$\bigcirc$丸高　穂山\footnote{面白会員}\ $\cdot$\ 浜平　純崎\footnote{わくわく会員}}\\
-{\small Hoyama Marutaka and Zyunsaki Hamahira}}
-% \date{\西暦{\today}}
-\date{}
+\author{$\bigcirc$方下　太郎\footnote{hoge}\ $\cdot$\ 府賀　二郎\footnote{huga}}
+\enauthor{Tarou Hoge and Zirou Huga}
 
 \begin{document}
 
