update the preference of references

--- a/preambles/rssj.tex
+++ b/preambles/rssj.tex
@@ -39,6 +39,9 @@
 % 注釈の表示を変更
 \renewcommand{\thefootnote}{\arabic{footnote}}
 
+% 参考文献の表示を変更
+\renewcommand{\refname}{【参考文献】}
+
 % タイトルの注釈を数字に
 \makeatletter%% ここから、おまじない
   \renewcommand{\maketitle}{\par%%% \maketitleの再定義
