--- a/main.tex
+++ b/main.tex
@@ -4,8 +4,15 @@
 \title{日本語タイトル}
 \entitle{Title in English}
 
-\author{$\bigcirc$方下　太郎\footnote{hoge}\ $\cdot$\ 府賀　二郎\footnote{huga}}
-\enauthor{Tarou Hoge and Zirou Huga}
+\newcommand{\belonga}{東京大学工学系研究科\newline (〒113-0033 東京都文京区本郷7-3-1)}
+
+\newcommand{\belongb}{huga}
+
+\author{$\bigcirc$方下　太郎\footnote{\belonga}\ $\cdot$\
+府賀　二郎\footnotemark[1] \ $\cdot$\
+教員　三郎\footnote{\belongb}}
+
+\enauthor{Tarou Hoge and Zirou Huga and Saburo Kyoin}
 
 \begin{document}
 
