--- a/preambles/rssj.tex
+++ b/preambles/rssj.tex
@@ -16,6 +16,8 @@
 % \usepackage{comment}  % コメントアウト
 % \usepackage[version=3]{mhchem}  % 化学式
 % \usepackage{url}  % url表示
+\usepackage{algorithm}  % 擬似コードの表示
+\usepackage[noend]{algpseudocode}  % 擬似コードの表示
 \usepackage[all, error]{onlyamsmath}  % 古いパッケージを警告
 \usepackage[dvipdfmx]{hyperref}  % ハイパーリンク
 \usepackage{url}  % urlの記載
@@ -39,7 +41,7 @@
 % 注釈の表示を変更
 \renewcommand{\thefootnote}{\arabic{footnote}}
 
-% 参考文献の表示を変更
+% 参考文献の表示
 \renewcommand{\refname}{【参考文献】}
 
 % タイトルの注釈を数字に
