update some lines

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\input{(このディレクトリの絶対パス)/preambles/rssj.tex}
+\input{/Users/yuki_kumon/Documents/LaTex/rssj_template/preambles/rssj.tex}
 
 
 \title{日本語タイトル}
