make comment out available

--- a/preambles/rssj.tex
+++ b/preambles/rssj.tex
@@ -13,7 +13,7 @@
 % \usepackage{ascmac}  % screen環境など
 % \usepackage{makeidx}  % ふりがなを付ける
 \usepackage{subfiles}  % ファイル分割
-% \usepackage{comment}  % コメントアウト
+\usepackage{comment}  % コメントアウト
 % \usepackage[version=3]{mhchem}  % 化学式
 % \usepackage{url}  % url表示
 \usepackage{algorithm}  % 擬似コードの表示
